--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Data source=datingapp.db"
   },
+  "TokenKey": "Token key for this project",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
